@@ -7,7 +7,7 @@
 ## http://search.cpan.org/~akaplan/Devel-NYTProf
 ##
 ##########################################################
-# $Id: nytprofhtml 1297 2010-06-10 10:24:38Z tim.bunce@gmail.com $
+# $Id: nytprofhtml 1303 2010-06-16 22:47:41Z tim.bunce@gmail.com $
 ###########################################################
 use warnings;
 use strict;
@@ -17,6 +17,18 @@ use Getopt::Long;
 use List::Util qw(sum max);
 use File::Copy;
 use File::Path qw(rmtree);
+
+# Handle --profself before loading Devel::NYTProf::Core
+# (because it parses NYTPROF for options)
+BEGIN {
+    if (grep { $_ eq '--profself' } @ARGV) {
+        # profile nytprofhtml itself
+        our $profself = "nytprof-nytprofhtml.out";
+        $ENV{NYTPROF} .= ":file=$profself:trace=1";
+        require Devel::NYTProf;
+        END { warn "Profile of $0 written to $profself\n" if our $profself; } 
+    }
+}
 
 use Devel::NYTProf::Reader;
 use Devel::NYTProf::Core;
@@ -31,7 +43,7 @@ use Devel::NYTProf::Constants qw(NYTP_SCi_CALLING_SUB);
 my $json_any = eval { require JSON::Any; JSON::Any->import; JSON::Any->new }
     or warn "Can't load JSON::Any module - HTML visualizations skipped.\n";
 
-our $VERSION = '4.01';
+our $VERSION = '4.02';
 
 if ($VERSION != $Devel::NYTProf::Core::VERSION) {
     die "$0 version '$VERSION' doesn't match version '$Devel::NYTProf::Core::VERSION' of $INC{'Devel/NYTProf/Core.pm'}\n";
@@ -57,13 +69,7 @@ GetOptions(
     'open!'     => \my $opt_open,
     'help|h'    => sub { exit usage() },
     'minimal|m!'=> \my $opt_minimal,
-    'profself!'     => sub {
-        # profile nytprofhtml itself
-        our $profself = "nytprof-nytprofhtml.out";
-        $ENV{NYTPROF} .= ":file=$profself";
-        require Devel::NYTProf;
-        END { warn "Profile of $0 written to $profself\n" if our $profself; } 
-    },
+    'profself!'     => sub { }, # handled in BEGIN above
 ) or do { exit usage(); };
 
 
